fixed layout issues width sites sections. added more stlyes ot page

--- a/app/styles/layout/_layout.scss
+++ b/app/styles/layout/_layout.scss
@@ -11,6 +11,24 @@
 				  url("/images/me.png");
 	background-repeat: no-repeat;
 	background-position: 100% 100%;
+	border-bottom: 30px solid white;
+	&:after{
+		content:"";
+		top: 200px;
+		left: 40%;
+		position: relative;
+	 	border-top: 60px solid white;
+	 	border-left: 40px solid transparent;
+	  	border-right: 40px solid transparent;
+	  	// reponsive layout for tablets and up
+	  	@media only screen and (min-width: 850px) {
+	  		top: 120px;
+	  		left: 50%;
+	  		border-top: 70px solid white;
+		 	border-left: 50px solid transparent;
+		  	border-right: 50px solid transparent;
+	  	}
+	}
 	// reponsive layout for tablets and up
 	@media only screen and (min-width: 850px) { 
 		height:450px;
@@ -25,10 +43,26 @@
 
 .l-body-examples{
 	width:100%;
+	border-bottom: 30px solid white;
+	&:after{
+		content:"";
+		top: 150px;
+		left: 40%;
+		position: relative;
+	 	border-top: 60px solid white;
+	 	border-left: 40px solid transparent;
+	  	border-right: 40px solid transparent;
+	  	@media only screen and (min-width: 850px) {
+	  		top: 100px;
+	  		left: 45%;
+	  		border-top: 70px solid white;
+		 	border-left: 50px solid transparent;
+		  	border-right: 50px solid transparent;
+	  	}
+	}
 }
 
 .l-body-footer{
 	width:100%;
 	height: 100px;
-	border-top: 3px solid black;
 }
