--- a/app/styles/modules/_modules.scss
+++ b/app/styles/modules/_modules.scss
@@ -6,16 +6,6 @@
 .header-container{
 	width:inherit;
 	height:inherit;
-	border-bottom: 10px solid red;
-	&:after{
-		content:"";
-		top: 105px;
-		left: 50%;
-		position: relative;
-	 	border-top: 70px solid red;
-	 	border-left: 50px solid transparent;
-	  	border-right: 50px solid transparent;
-	}
 }
 
 .header-name{
@@ -36,16 +26,16 @@
 	@include make-sm-column(12);
 	margin-top: 100px;
 	text-align: center;
-	font-size: em(20px);
+	font-size: em(25px);
 	// reponsive layout for tablets and up
 	@media only screen and (min-width: 850px) { 
 		@include make-sm-column(7);
-		margin-top: 410px;		
+		margin-top: 370px;		
 	}
 }
 
 .naviList{
-	//BEM element
+	//BEM element for .naviList
 	&__item{
 	display: inline-block;
 	margin-left: 5px;
@@ -56,11 +46,29 @@
 }
 
 .about{
+	padding-top: 40px;
 	padding-left:10px;
 	padding-right: 10px;
 	//margin-top: 50px;
 	background:green;
-	//BEM Element
+	border-bottom: 30px solid white;
+	&:after{
+		content:"";
+		top: 150px;
+		left: 50%;
+		position: relative;
+	 	border-top: 60px solid white;
+	 	border-left: 40px solid transparent;
+	  	border-right: 40px solid transparent;
+	  	@media only screen and (min-width: 850px) {
+	  		top: 100px;
+	  		left: 45%;
+	  		border-top: 70px solid white;
+		 	border-left: 50px solid transparent;
+		  	border-right: 50px solid transparent;
+	  	}
+	}
+	//BEM Element for .about
 	&__head{
 		text-align: center;
 		@media only screen and (min-width: 850px) {
@@ -68,7 +76,7 @@
 			text-align: left;
 		}
 	}
-	//BEM Element
+	//BEM Element for .about
 	&__text{
 		padding:20px;
 		margin-left: auto;
@@ -77,6 +85,7 @@
 		font-size: em(20px);
 		// reponsive layout for tablets and up
 		@media only screen and (min-width: 850px) {
+			padding:40px;
 			font-size: em(26px);
 		}
 	}
@@ -84,38 +93,39 @@
 
 
 .exampleList{
-	display: flex;
-	flex-direction:column;
-	padding-top: 20px;
+	display:flex;
+  	flex-direction:column;
+  	justify-content:center;
 	margin-left: auto;
 	margin-right: auto;
-	width: 80%;
+	padding: 30px;
+	width: 90%;
 	background:red;
 	// reponsive layout for tablets and up
 	@media only screen and (min-width: 850px) {
 		flex-direction:row;
 		flex-wrap:wrap;
 	}
-	//BEM Element
+	//BEM Element for .exampleList
 	&__item{
-		margin-right: auto;
-		margin-left: auto;
-		margin-bottom: 10px;
-		width:75%;
+		margin: 20px auto;
+		width: 50%;
 		height:300px;
 		background:red;
 		border: solid 2px black;
 		// reponsive layout for tablets and up
 		@media only screen and (min-width: 850px) {
-			padding-left: 15px;
-			padding-right: 15px;
-			background: green;
-			width:40%;
+			// padding-left: 15px;
+			// padding-right: 15px;
+			width:45%;
+			background: yellow;
 		}
 
 	}
 }
 
 .foot-text{
+	margin-top: 50px;
 	text-align: center;
+	font-size: em(20px)
 }
